# agentine

./: .gitignore  .mcp.json  AGENT_COMMS.md  ARCHITECT.md  COMMUNICATION.md  DISPATCH_PROPOSAL.md  DOCKER.md  Dockerfile  PROPOSALS.md  README.md  SUMMARY_FORMAT.md  TODOS.md  agents.conf  agents.toml  docker-compose.yml  pyproject.toml
backends/: claude.sh  codex.sh
cache/: ARCHITECT.summary  COMMUNITY_MANAGER.summary  DEVELOPER.aegis.summary  DEVELOPER.beacon.summary  DEVELOPER.bellows.summary  DEVELOPER.blanch.summary  DEVELOPER.cadence.summary  DEVELOPER.chromapaint.summary  DEVELOPER.ciphertrust.summary  DEVELOPER.dateflow.summary  DEVELOPER.disprove.summary  DEVELOPER.docket.summary  DEVELOPER.faultline.summary  DEVELOPER.folio.summary  DEVELOPER.hashward.summary  DEVELOPER.herald.summary  DEVELOPER.loom.summary  DEVELOPER.markuptree.summary  DEVELOPER.matchbox.summary  DEVELOPER.pennant.summary  DEVELOPER.pixo.summary  DEVELOPER.prism.summary  DEVELOPER.pyre.summary  DEVELOPER.recurrence.summary  DEVELOPER.replica.summary  DEVELOPER.resurge.summary  DEVELOPER.reveal.summary  DEVELOPER.slidecraft.summary  DEVELOPER.slugsmith.summary  DEVELOPER.sonance.summary  DEVELOPER.spectra.summary  DEVELOPER.stanza.summary  DEVELOPER.summary  DEVELOPER.tincture.summary  DEVELOPER.tint.summary  DEVELOPER.webenc.summary  DOCUMENTATION_WRITER.summary  DOCUMENTATION_WRITER.tincture.summary  MAINTAINER.summary  PROJECT_MANAGER.attest.summary  (+31 more)
commands/: bump-version.sh  check-name.sh  init-project.sh  list-issues.sh  list-prs.sh  setup-github.sh  sync-templates.sh
scripts/: qa.sh  (+9 more)
(+54 files in other folders)
