[project]
name = "agentine"
version = "0.1.0"
description = "Autonomous agents that create maintained alternatives to abandoned open-source libraries"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.2.0",
    "requests>=2.32.5",
]

[project.scripts]
agentine-dispatch = "agentine.dispatch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
